# final-project-predict-maintenance-system

./: .env.example  .gitignore  docker-compose.yml
ai_services/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  run_pipeline.sh
ai_services/anomaly/: Dockerfile  anomaly_detector.py  detector_runner.py  snapshot_builder.py
ai_services/configs/: agents.yaml  thresholds.yaml
ai_services/inference_package/: ae_feature_names.json  ae_model.pt  imputer.pkl  model_card.json  platt_calibrator.json  rul_best_params.json  rul_model_best.pt  rul_scaler.json  scaler.pkl
ai_services/ingestion/: Dockerfile  producer.py  producer_runner.py
ai_services/orchestrator/: Dockerfile  app.py  gate.py  graph.py  metrics.py  tracing.py
ai_services/orchestrator/agents/: base.py  cost_agent.py  health_agent.py  llm_utils.py  manager_agent.py  production_agent.py  safety_agent.py
ai_services/orchestrator/prompts/: cost.txt  health.txt  manager.txt  production.txt
ai_services/predictor/: Dockerfile  app.py  fault_detector.py  inference.py  model_loader.py  predictor_runner.py
ai_services/scripts/: compute_baseline.py  demo_runner.py  demo_scenario_a.py  demo_scenario_b.py  demo_scenario_c.py  eval_prompts.py  export_dpo_pairs.py  register_model.py  stress_test.py  tune_thresholds.py  validate_e2e.py
ai_services/shared/: cache.py  config.py  database.py  messaging.py  schemas.py  storage.py
ai_services/signal_processor/: Dockerfile  consumer.py  feature_extractor.py  processor_runner.py
ai_services/tests/: conftest.py  test_agents.py  test_anomaly_detector.py  test_gate.py  test_graph_app.py  test_llm_agents.py  test_negotiation_graph.py  test_predictor.py  test_safety_agent.py
backend/: .env.example  .gitignore  Docker_Service.md  Dockerfile  Fix-Backend.md  TEAM_SHARED_CONTRACT.md  package-lock.json  package.json  prisma.config.js
backend/db/: auth-schema.sql
backend/prisma/: schema.prisma  seed.js
backend/scripts/: seed-admin.js
backend/src/: app.js  server.js
backend/tests/: check-db.js  get-token.js  smoke-test.js  test-admin-api.js  test-api.js  test-decisions-api.js  test-predictions-v2.js  test-predictions.js  test-time-filter.js  test-unauthorized.js  test-user-management.js  test-users.js  test-ws-auth.js
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: analytics-shell.tsx  app-shell.tsx  error-boundary.tsx
frontend/hooks/: useRULStream.ts
frontend/lib/: auth.ts  (+2 more)
monitoring/: prometheus.yml
scripts/: dev.sh
(+105 files in other folders)
