[project]
name = "ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "asyncpg>=0.31.0",
    "datetime>=6.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "minio>=7.2",
    "aiokafka>=0.14.0",
    "redis>=7.4.0",
    "numpy>=2.4.4",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "scipy>=1.15.0",
    "PyWavelets>=1.7.0",
    "torch>=2.7.0",
    "scikit-learn>=1.6.0",
    "pyyaml>=6.0.2",
    "prometheus-client>=0.21.0",
    "mlflow>=2.22.0",
    "httpx>=0.28.0",
    "pytest>=9.0.3",
    "pytest-env>=1.1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "POSTGRES_USER=test",
    "POSTGRES_PASSWORD=test",
    "POSTGRES_DB=test",
    "MINIO_USER=test",
    "MINIO_PASSWORD=test",
    "REDIS_PASSWORD=test",
    "MODEL_VERSION=test-v0",
]
